--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
     sdk: flutter
   path_provider: ^1.6.0
   http: ^0.13.0
-  path: ^1.8.0 
+  path: ^1.8.0-nullsafety.1
 
 dev_dependencies:
   flutter_test:
