--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   path_provider: ^1.6.0
-  http: ^0.13.0
+  http: ^0.12.0+2
   path: ^1.8.0-nullsafety.1
 
 dev_dependencies:
